--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Web API Challenge",
   "main": "index.js",
   "scripts": {
+    "start" : "node index.js",
     "server": "nodemon index.js"
   },
   "repository": {
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/LambdaSchool/Sprint-Challenge-Node-Express#readme",
   "dependencies": {
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.1",
     "knex": "^0.19.1",
